docker-compose.yml, Dockerfile and Makefile added
